# AgenticMind

./: .env.example  AUTH_SETUP.md  App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  settings.ts  types.ts
components/: AuthModal.tsx  ContextMenu.tsx  ConversationHistory.tsx  ConversationListItem.tsx  ConversationSidebar.tsx  GuestBanner.tsx  Header.tsx  InteractionToolbar.tsx  InteractionView.tsx  LoadingSpinner.tsx  PasswordResetModal.tsx  PatternSelector.tsx  PromptInput.tsx  SettingsModal.tsx
components/icons/: CloseIcon.tsx  CopyIcon.tsx  ExportIcon.tsx  MultiAgentIcon.tsx  PlanningIcon.tsx  ReActIcon.tsx  ReflectionIcon.tsx  SettingsIcon.tsx  ToolUseIcon.tsx
components/logEntries/: AgentMessageEntry.tsx  PlanEntry.tsx  ThoughtEntry.tsx  ToolCallEntry.tsx  ToolResultEntry.tsx
contexts/: AuthContext.tsx  ConversationContext.tsx
hooks/: useAuth.ts
server/: package-lock.json  package.json
server/prisma/: schema.prisma
server/server/: package-lock.json  package.json
server/src/: geminiService.ts  index.ts  types.ts
services/: conversationService.ts  folderService.ts  geminiService.ts  settingsService.ts  tagService.ts
src-tauri/: Cargo.toml  tauri.conf.json
supabase/: functions.sql  rls.sql  schema.sql
utils/: validation.ts
